--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,24 @@
 asgiref==3.11.0
+black==26.1.0
+cfgv==3.5.0
+click==8.3.1
+distlib==0.4.0
 Django==6.0.1
+django-db-connection-pool==1.2.6
+filelock==3.20.3
+identify==2.6.16
+isort==7.0.0
+mypy_extensions==1.1.0
+mysqlclient==2.2.7
+nodeenv==1.10.0
+packaging==26.0
+pathspec==1.0.4
+platformdirs==4.5.1
+pre_commit==4.5.1
+pytokens==0.4.1
+PyYAML==6.0.3
+SQLAlchemy==2.0.46
+sqlparams==6.2.0
 sqlparse==0.5.5
+typing_extensions==4.15.0
+virtualenv==20.36.1
